--- a/card.styl
+++ b/card.styl
@@ -1,2 +1,68 @@
+jygoGreen = #ACDD5B
+jygoYellow = #F5F11E
+// jygoRed = #B8496E
+jygoRed = #D27070
+jygoBlue = #6FCFD3
+
+@font-face
+	font-family 'din-black'
+	src url('./DIN-Black-corrected.ttf')
+
+@font-face
+	font-family 'din-bold'
+	src url('./DIN-Bold.ttf')
+
+@font-face
+	font-family 'din-medium'
+	src url('./DIN-Medium.ttf')
+
+@font-face
+	font-family 'din-ultralight'
+	src url('./DIN-UltraLight.otf')
+
+body
+	display flex
+	justify-content center
+	align-items center
+	height 70vh
+	font-family 'din-ultralight'
+
 .card
-	color blue
+	background jygoBlue
+	height 130px
+	min-width 380px
+	&.folded
+		position relative
+		overflow hidden
+		display flex
+		justify-content flex-end
+		&:hover
+			.preview-section
+				left 0
+			.title-section
+				// transform scale(2, 2)
+				width 50%
+		.title-section, .preview-section
+			display inline-block
+		.preview-section
+			position absolute
+			display inline-block
+			z-index 2
+			left -60%
+			width 50%
+			height 100%
+			transition left .4s
+			background jygoRed
+			text-align center
+			// box-shadow -8px 2px 32px 13px rgba(0,0,0,0.75)
+		.title-section
+			height 100%
+			width 100%
+			display flex
+			flex-direction column
+			justify-content center
+			align-items center
+			text-transform uppercase
+			transition all .4s
+			.icon
+				height 50px
